line endings bah

--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-A place to put some scripts I've written for OSX, in case anyone else finds
-them useful.
+A place to put some scripts I've written for OSX, in case anyone else finds them useful.
