--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 A place to put some scripts I've written for OSX, in case anyone else finds them useful.
+
+ichatloc - Sets iChat status based on what wireless network you're connected to.
